--- a/welcome.html
+++ b/welcome.html
@@ -63,7 +63,7 @@
 <body>
   <div class="card">
     <h1>𝒗𝒐𝒊𝒅𝒉𝒘𝒂</h1>
-    <button class="enter-btn" onclick="location.href='page2.html'">Enter</button>
+    <button class="enter-btn"">Enter</button>
   </div>
 </body>
 </html>
