--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@
 
     body {
       height: 100vh;
-      background: url('content://ru.zdevs.zarchiver.external/storage/emulated/0/Pictures/Instagram/IMG_20250726_182824_212.jpg') center/cover no-repeat fixed;
+      background: url('IMG_20250726_182824_212.jpg') center/cover no-repeat fixed;
       display: flex;
       justify-content: center;
       align-items: center;
