--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@
 
     body {
       height: 100vh;
-      background:url('https://997-netizen.github.io/Manhwa-voidhwa/IMG_20250726_182824_212.jpg') center/cover no-repeat fixed;
+      background:background: url('https://mohammedraheelahmed997-netizen.github.io/Manhwa-voidhwa/IMG_20250726_182824_212.jpg') center/cover no-repeat fixed;
       display: flex;
       justify-content: center;
       align-items: center;
