--- a/welcome.html
+++ b/welcome.html
@@ -3,67 +3,55 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>VoidHwa</title>
+  <title>Voidhwa</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
+      margin: 0;
       height: 100vh;
-      background:background: background: url('https://mohammedraheelahmed997-netizen.github.io/Manhwa-voidhwa/IMG_20250726_182824_212.jpg') center/cover no-repeat fixed;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: serif;
-      backdrop-filter: blur(2px);
+      background: radial-gradient(circle at center, #ffffff, #fce6e6);
+      font-family: sans-serif;
     }
 
     .card {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: #444;
       border-radius: 30px;
-      padding: 50px 30px;
+      padding: 60px 40px;
       text-align: center;
-      box-shadow: 0 0 30px rgba(255, 0, 0, 0.3);
-      backdrop-filter: blur(10px);
+      box-shadow: 0 0 40px rgba(255, 0, 0, 0.3);
     }
 
     .card h1 {
-      font-size: 2.5rem;
-      color: #cc0022;
-      font-style: italic;
+      color: red;
+      font-size: 40px;
       font-weight: bold;
       margin-bottom: 30px;
-      text-shadow: 0 0 2px #cc0022, 0 0 8px #cc0022;
+      text-shadow: 0 0 5px rgba(255, 0, 0, 0.6);
     }
 
-    .enter-btn {
-      padding: 12px 28px;
-      font-size: 1rem;
-      font-weight: bold;
+    .card button {
+      padding: 14px 28px;
+      font-size: 18px;
+      background-color: #5c1f1f;
       color: white;
-      background: rgba(255, 0, 0, 0.2);
       border: none;
       border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255, 0, 0, 0.4);
-      backdrop-filter: blur(5px);
-      transition: all 0.3s ease;
       cursor: pointer;
+      box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
+      transition: background-color 0.3s ease;
     }
 
-    .enter-btn:hover {
-      background: rgba(255, 0, 0, 0.4);
-      transform: scale(1.05);
-      box-shadow: 0 0 25px rgba(255, 0, 0, 0.7);
+    .card button:hover {
+      background-color: #7d2626;
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <h1>𝒗𝒐𝒊𝒅𝒉𝒘𝒂</h1>
-    <button class="enter-btn"">Enter</button>
+    <h1>voidhwa</h1>
+    <button>Enter</button>
   </div>
 </body>
 </html>
