--- a/welcome.html
+++ b/welcome.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Voidhwa</title>
+  <meta charset="UTF-8">
+  <title>VoidHwa</title>
   <style>
     body {
       margin: 0;
@@ -11,46 +10,59 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: radial-gradient(circle at center, #ffffff, #fce6e6);
-      font-family: sans-serif;
+      background-color: black;
+      overflow: hidden;
+      font-family: 'Arial Black', sans-serif;
     }
 
-    .card {
-      background-color: #444;
-      border-radius: 30px;
-      padding: 60px 40px;
+    /* Background grid glow */
+    .background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 20% 20%, rgba(255, 0, 0, 0.1), transparent 40%),
+                  radial-gradient(circle at 80% 30%, rgba(255, 0, 0, 0.1), transparent 40%),
+                  radial-gradient(circle at 50% 80%, rgba(255, 0, 0, 0.1), transparent 40%);
+      background-color: #000;
+      z-index: -1;
+    }
+
+    .box {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 50px 30px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
       text-align: center;
-      box-shadow: 0 0 40px rgba(255, 0, 0, 0.3);
     }
 
-    .card h1 {
+    .box h1 {
       color: red;
       font-size: 40px;
-      font-weight: bold;
-      margin-bottom: 30px;
-      text-shadow: 0 0 5px rgba(255, 0, 0, 0.6);
+      margin: 0 0 20px 0;
+      text-shadow: 0 0 10px red;
     }
 
-    .card button {
-      padding: 14px 28px;
-      font-size: 18px;
-      background-color: #5c1f1f;
-      color: white;
+    .box button {
+      background-color: rgba(255, 0, 0, 0.3);
       border: none;
-      border-radius: 20px;
+      color: white;
+      padding: 10px 25px;
+      font-size: 18px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
       cursor: pointer;
-      box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
-      transition: background-color 0.3s ease;
+      transition: 0.3s;
     }
 
-    .card button:hover {
-      background-color: #7d2626;
+    .box button:hover {
+      background-color: rgba(255, 0, 0, 0.5);
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>𝒗𝒐𝒊𝒅𝒉𝒘𝒂</h1>
+  <div class="background"></div>
+  <div class="box">
+    <h1>voidhwa</h1>
     <button>Enter</button>
   </div>
 </body>
